Double scroll bar fix for chrome

--- a/css/styles.css
+++ b/css/styles.css
@@ -140,8 +140,6 @@ overflow-y: scroll;
   position: absolute;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 .sidenav-product {
